feat(page-header): Added page header functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 class="text-3xl font-bold underline">hello world!</h1>
+<div class="max-h-screen flex flex-col">
+  <app-pageheader/>
+</div>
 <router-outlet />
